2009-02-18  Xan Lopez  <xan@gnome.org>

Reviewed by Mark Rowe.

        https://bugs.webkit.org/show_bug.cgi?id=23989

        Based on a patch by Bo Yang  <techrazy.yang@gmail.com>

        Make the cursor cache global, that's all we really need and
        otherwise we can miss cursor transitions in some situations (see
        the bug for one testcase). Also remove some now useless code.

        * platform/Widget.h:
        * platform/gtk/WidgetGtk.cpp:
        (WebCore::Widget::Widget):
        (WebCore::Widget::~Widget):
        (WebCore::Widget::setCursor):

git-svn-id: svn://svn.chromium.org/blink/trunk@41055 bbb929c8-8fbe-4397-9dbb-9b2b20218538